; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_file.c_on_config_etag.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_file.c_on_config_etag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }
%struct.st_h2o_file_configurator_t = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"OFF,ON\00", align 1
@H2O_FILE_FLAG_NO_ETAG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32*, i32*)* @on_config_etag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_config_etag(%struct.TYPE_6__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.st_h2o_file_configurator_t*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to i8*
  %13 = bitcast i8* %12 to %struct.st_h2o_file_configurator_t*
  store %struct.st_h2o_file_configurator_t* %13, %struct.st_h2o_file_configurator_t** %8, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @h2o_configurator_get_one_of(%struct.TYPE_6__* %14, i32* %15, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  switch i32 %16, label %34 [
    i32 0, label %17
    i32 1, label %25
  ]

17:                                               ; preds = %3
  %18 = load i32, i32* @H2O_FILE_FLAG_NO_ETAG, align 4
  %19 = load %struct.st_h2o_file_configurator_t*, %struct.st_h2o_file_configurator_t** %8, align 8
  %20 = getelementptr inbounds %struct.st_h2o_file_configurator_t, %struct.st_h2o_file_configurator_t* %19, i32 0, i32 0
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = or i32 %23, %18
  store i32 %24, i32* %22, align 4
  br label %35

25:                                               ; preds = %3
  %26 = load i32, i32* @H2O_FILE_FLAG_NO_ETAG, align 4
  %27 = xor i32 %26, -1
  %28 = load %struct.st_h2o_file_configurator_t*, %struct.st_h2o_file_configurator_t** %8, align 8
  %29 = getelementptr inbounds %struct.st_h2o_file_configurator_t, %struct.st_h2o_file_configurator_t* %28, i32 0, i32 0
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = and i32 %32, %27
  store i32 %33, i32* %31, align 4
  br label %35

34:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %36

35:                                               ; preds = %25, %17
  store i32 0, i32* %4, align 4
  br label %36

36:                                               ; preds = %35, %34
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32 @h2o_configurator_get_one_of(%struct.TYPE_6__*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
